// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toaster Default 1`] = `
<div
  className="sc-gipzik gZSZiZ"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
<<<<<<< HEAD
      className="sc-fYxtnH dlkCOS"
=======
      className="sc-tilXH kMPENQ"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
    >
      <div
        className="sc-bwzfXH cbcpsK"
      >
        <div
<<<<<<< HEAD
          className="sc-tilXH cCFWJY"
=======
          className="sc-hEsumM dckXUS"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
        >
          <div
            className="sc-bwzfXH jQmHZh"
          >
            <span
<<<<<<< HEAD
              className="sc-ifAKCX chsNTs"
=======
              className="sc-ifAKCX jHMnVy"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH kKctzU"
          >
            <div
              className="sc-bwzfXH gaQYSB"
            >
              <p
<<<<<<< HEAD
                className="sc-bxivhb ildJSL"
=======
                className="sc-bxivhb gAVOHP"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
              >
                Thought provoking we must stand.
              </p>
              <p
<<<<<<< HEAD
                className="sc-bxivhb kFVWeI"
=======
                className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
              >
                Game-changer problem-solvers; state of play invest, synergy uplift we must stand up ideate social intrapreneurship.
              </p>
            </div>
          </div>
          <div
            className="sc-bwzfXH bQfpwP"
          >
            <button
<<<<<<< HEAD
              className="sc-htoDjs flaPve"
              color={undefined}
=======
              className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
              disabled={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toaster With action button 1`] = `
<div
  className="sc-gipzik gZSZiZ"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
<<<<<<< HEAD
      className="sc-fYxtnH dlkCOS"
=======
      className="sc-tilXH kMPENQ"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
    >
      <div
        className="sc-bwzfXH cbcpsK"
      >
        <div
<<<<<<< HEAD
          className="sc-tilXH ixSjMq"
=======
          className="sc-hEsumM eaYoif"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
        >
          <div
            className="sc-bwzfXH jQmHZh"
          >
            <span
<<<<<<< HEAD
              className="sc-ifAKCX hURNXo"
=======
              className="sc-ifAKCX fbGKwU"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH kKctzU"
          >
            <div
              className="sc-bwzfXH gaQYSB"
            >
              <p
<<<<<<< HEAD
                className="sc-bxivhb ildJSL"
=======
                className="sc-bxivhb gAVOHP"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
              >
                Overcome injustice.
              </p>
              <p
<<<<<<< HEAD
                className="sc-bxivhb kFVWeI"
=======
                className="sc-bxivhb fpMQQD"
>>>>>>> 07d3a3a... refactored the Text Component to the size-steps according to design (#228)
              >
                Global low-hanging fruit, collaborative consumption segmentation mobilize support. Problem-solvers cultivate, best practices, shared unit of.
              </p>
            </div>
            <div
              className="sc-bwzfXH kWLDUa"
            >
              <button
<<<<<<< HEAD
                className="sc-htoDjs gCmkyb"
                color={undefined}
=======
                className="sc-VigVT cZkyFH sc-htoDjs ifkBJX"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
                disabled={undefined}
                id={undefined}
                onClick={[Function]}
                title="Hello"
                type="button"
              >
                Hello
              </button>
            </div>
          </div>
          <div
            className="sc-bwzfXH bQfpwP"
          >
            <button
<<<<<<< HEAD
              className="sc-htoDjs flaPve"
              color={undefined}
=======
              className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
>>>>>>> 4484a45... Added CTA button variant and changed button props (#220)
              disabled={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
